# kamry

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  dash  pico_llvm_clang.cmake
apps/dash/: CMakeLists.txt  Makefile  cmake_install.cmake
apps/dash/include/: gauge.hpp  rcan.hpp  telemetry.hpp
apps/dash/src/: PID.cpp  can.cpp  common.cpp  gauge.cpp  main.cpp  rcan.cpp
apps/pico/: CMakeLists.txt
apps/pico/bcm_front/: CMakeLists.txt
apps/pico/bcm_front/src/: main.cpp
binaries/: dash
build_dash/: CMakeCache.txt  Makefile  cmake_install.cmake
build_dash/binaries/: dash
build_dash/can/: Makefile  cmake_install.cmake
build_dash/can_bcm/: Makefile  cmake_install.cmake
build_dash/can_ecu/: Makefile  cmake_install.cmake
build_pico/: CMakeCache.txt  Makefile  cmake_install.cmake
build_pico/bcm_front/: Makefile  bcm_front.uf2  cmake_install.cmake
build_pico/libraries/: Makefile  cmake_install.cmake
build_pico/libraries/can/: Makefile  cmake_install.cmake
build_pico/libraries/can2040/: Makefile  cmake_install.cmake
build_pico/libraries/can_bcm/: Makefile  cmake_install.cmake
build_pico/libraries/can_ecu/: Makefile  cmake_install.cmake
build_pico/pico-sdk/: Makefile  cmake_install.cmake
build_pico/pico-sdk/docs/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/common/boot_uf2_headers/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/common/hardware_claim/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/common/pico_base_headers/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/common/pico_divider_headers/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2350/boot_stage2/: Makefile  bs2_default_padded_checksummed.S  cmake_install.cmake
build_pico/pico-sdk/src/rp2350/hardware_regs/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2350/hardware_structs/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2350/pico_platform/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/boot_bootrom_headers/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/cmsis/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_adc/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_base/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_boot_lock/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_clocks/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_dcp/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_divider/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_dma/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_exception/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_flash/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_gpio/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_i2c/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_interp/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_irq/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_pio/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_pll/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_powman/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_pwm/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_rcp/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_resets/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_riscv_platform_timer/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_sha256/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_spi/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_sync/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_sync_spin_lock/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_ticks/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_timer/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_uart/: Makefile  cmake_install.cmake
build_pico/pico-sdk/src/rp2_common/hardware_vreg/: Makefile  cmake_install.cmake
build_pico/pico-sdk/tools/: Makefile  cmake_install.cmake
dash-prefix/src/dash-stamp/: dash-source_dirinfo.txt
dash-prefix/tmp/: dash-cfgcmd.txt  dash-mkdirs.cmake
include/: CMakeLists.txt  can.hpp  common.hpp  pid.hpp
libraries/: CMakeLists.txt
libraries/can/: CMakeLists.txt  Makefile  can.hpp  cmake_install.cmake
libraries/can2040/: CMakeLists.txt
libraries/can_bcm/: CMakeLists.txt  Makefile  can_bcm.hpp  cmake_install.cmake
libraries/can_ecu/: CMakeLists.txt  Makefile  can_ecu.hpp  cmake_install.cmake
pico-prefix/src/pico-stamp/: pico-source_dirinfo.txt
pico-prefix/tmp/: pico-cfgcmd.txt  pico-mkdirs.cmake
pico_nodes-prefix/tmp/: pico_nodes-cfgcmd.txt  pico_nodes-mkdirs.cmake
(+108 files in other folders)
